增加动态改变数据demo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RotatePieChart</string>
+    <string name="btn_text_add">增加数据</string>
+    <string name="btn_text_deduct">减少数据</string>
 </resources>
